# resume

./: .dockerignore  Dockerfile  gatsby-config.js  package-lock.json  package.json  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  main.yaml
backend/: Dockerfile  main.py  pyproject.toml
deploy/: config.yml  docker-compose.yml  main.yml  nginx_default.conf
frontend/: gatsby-config.js  package-lock.json
frontend/src/components/: style.js
frontend/src/components/contact/: form.js  icons.js  index.js
frontend/src/components/navbar/: brand.js  constants.js  navbar.js
frontend/src/components/projects/: projects.js
frontend/src/components/work-experience/: index.js  item.js
src/components/: homepage.js  style.js
src/components/contact/: form.js  icons.js  index.js
src/components/navbar/: brand.js  burger-menu.js  collapse-menu.js  constants.js  navbar.js
src/components/projects/: card.js  projects.js  pull-requests.js
src/components/work-experience/: index.js  item.js
src/pages/: index.js
