[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sylvain.chateau <sylvain.chateau@outscale.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
